--- a/projetos/static/css/base.css
+++ b/projetos/static/css/base.css
@@ -31,7 +31,7 @@ h3 { font-size: clamp(1.2rem, 1.0rem + 0.8vw, 1.4rem); }
   position: -webkit-fixed;
   width: 100%;
   top: 0;
-  z-index: 1999;
+  z-index: 4; /* cuidado para não sobrepor tooltips */
 }
 
 p {margin-bottom: 0.1em;}
