melhorando mensagens de erro

--- a/templates/404.html
+++ b/templates/404.html
@@ -176,7 +176,7 @@
       </div>
 
       <div class="contato">
-        se acredita haver um problema no endereço, notificar:
+        se acredita haver um problema no endereço, notificar:<br><br>
         <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>
       </div>
 {% endblock %}
