escondendo botoes em impressoes

--- a/projetos/templates/projetos/projeto_infos.html
+++ b/projetos/templates/projetos/projeto_infos.html
@@ -858,8 +858,7 @@
 
       <hr>
 
-      
-      <div class="card mb-3 text-muted font-weight-bold">
+      <div class="card mb-3 text-muted font-weight-bold esconder">
         <div class="card-header py-1 pl-2">
           {% lng "Avaliações e Resultados" "Evaluations and Results" %}
         </div>
@@ -896,7 +895,7 @@
         </div>
       </div>
 
-      <div class="card mb-3 text-muted font-weight-bold">
+      <div class="card mb-3 text-muted font-weight-bold esconder">
         <div class="card-header py-1 pl-2">
           {% lng "Agendamentos" "Schedules" %}
         </div>
@@ -917,7 +916,7 @@
         </div>
       </div>
 
-      <div class="card mb-3 text-muted font-weight-bold">
+      <div class="card mb-3 text-muted font-weight-bold esconder">
         <div class="card-header py-1 pl-2">
           {% lng "Edições" "Editions" %}
         </div>
