--- a/templates/filtro_documentos.html
+++ b/templates/filtro_documentos.html
@@ -6,7 +6,7 @@
 
 {% load linguas %}
 
-<div id="doc-filter-bar" style="margin-bottom: 2px;">
+<div id="doc-filter-bar" style="margin-bottom: 2px;" class="esconder">
   <button id="doc-filter-toggle" type="button" class="btn btn-sm btn-outline-secondary">
     <i class="fas fa-filter"></i>
     {% lng "Filtrar" "Filter" %}
