não repeti dias no calendário acadêmico

--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -336,11 +336,13 @@
                           {{ evento.startDate.day }}/{{ evento.startDate.month }} à {{ evento.endDate.day }}/{{ evento.endDate.month }} 
                         {% endif %}
                       {% else %}
-                        {% if evento.startDate == evento.endDate %} 
-                          ; {{ evento.endDate.day }}/{{ evento.endDate.month }}
-                        {% else %}
-                          ;  {{ evento.startDate.day }}/{{ evento.startDate.month }} à {{ evento.endDate.day }}/{{ evento.endDate.month }} 
-                        {% endif %}
+                        {% ifchanged evento.endDate.day evento.endDate.month %}
+                          {% if evento.startDate == evento.endDate %} 
+                            ; {{ evento.endDate.day }}/{{ evento.endDate.month }}
+                          {% else %}
+                            ;  {{ evento.startDate.day }}/{{ evento.startDate.month }} à {{ evento.endDate.day }}/{{ evento.endDate.month }} 
+                          {% endif %}
+                        {% endifchanged %}
                       {% endifchanged %}
                     </span>
                   </span>
