--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -271,7 +271,16 @@ tbody tr:nth-child(odd) {background-color: #f9f9f9;} */
 } 
 
 @media (max-width: 800px) {
-  .container-fluid {padding-right: 8px;padding-left: 8px;}
+  .container-fluid {
+    padding-right: 8px !important;
+    padding-left: 8px !important;
+  }
+}
+@media (max-width: 420px) {
+  .container-fluid {
+    padding-right: 4px !important;
+    padding-left: 4px !important;
+  }
 }
 
 @page {size: auto;}
