--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -235,18 +235,18 @@
             {% for aval in aluno|recuper_notas_estudante|dict_key:ano_semestre %}{% nospaces %}<!-- Notas -->
               {% with objs_items=aval.objetivos.items %}
               {% language "pt-br" %}<span data-toggle="tooltip" data-html="true" animation="true" 
-              title="{{aval.nome}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in objs_items %}&bull;{{o.titulo}}=<b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
+              title="{{aval.exame.titulo}} | peso={% widthratio aval.peso 1 100 %}%<br>{% for o,p in objs_items %}&bull;{{o.titulo}}=<b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
               lang="pt" style="white-space: nowrap; border-radius: 6px; background: #e0e9ec; margin-bottom: 0.08em; padding: 0.15em 0.15em;">
-                {{aval.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
+                {{aval.exame.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
                 >={% if aval.peso > 0 %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
                 {% if aval.nota == None %}<span style="color:red">??,??</span>{% endif %}
                 {% if objs_items %}<span class="objet_aval">[{% for o,p in objs_items %}{{o.sigla}}={{p.0|floatformat:1}}{% if forloop.last %}{% else %};{% endif %}{% endfor %}]</span>{% endif %}
                 {% if aval.bloqueado %}<span style="color:orange; cursor: pointer;" data-toggle="tooltip" data-html="true" animation="true" title="Nota não visível para estudantes"><sup><i class="fas fa-eye-slash" style="font-size:0.85em;"></i></sup></span>{% endif %}
               </span>{% endlanguage %}
               {% language "en" %}<span data-toggle="tooltip" data-html="true" animation="true" 
-              title="{{aval.nome_en}} | weight={% widthratio aval.peso 1 100 %}%<br>{% for o,p in objs_items %}&bull;{{o.titulo_en}}=<b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
+              title="{{aval.exame.titulo_en}} | weight={% widthratio aval.peso 1 100 %}%<br>{% for o,p in objs_items %}&bull;{{o.titulo_en}}=<b {% if p.0 < 5 %}class='text-danger'{% endif %}>{{p.0|floatformat:1}}</b><br>{% endfor %}"
               lang="en" style="white-space: nowrap; border-radius: 6px; background: #e0e9ec; margin-bottom: 0.08em; padding: 0.15em 0.15em; display:none">
-                {{aval.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
+                {{aval.exame.sigla}}<span class="pesos_aval">({% widthratio aval.peso 1 100 %}%)</span
                 >={% if aval.peso > 0 %}{{aval.nota|floatformat:1}}{% else %}{% if aval.nota >= 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
                 {% if aval.nota == None %}<span style="color:red">??.??</span>{% endif %}
                 {% if objs_items %}<span class="objet_aval">[{% for o,p in objs_items %}{{o.sigla}}={{p.0|floatformat:1}}{% if forloop.last %}{% else %};{% endif %}{% endfor %}]</span>{% endif %}
