--- a/operacional/templates/operacional/plano_aulas.html
+++ b/operacional/templates/operacional/plano_aulas.html
@@ -31,16 +31,45 @@
           </tr>
         </thead>
         <tbody>
-          {% for aula in aulas %}
+          {% regroup aulas by startDate as aulas_por_data %}
+          {% for grupo in aulas_por_data %}
             <tr class="item">
               <td>
-                <a class="open-modal" href="{% url 'edita_aula' aula.id %}" data-url="{% url 'edita_aula' aula.id %}">
-                  Aula {{forloop.counter|stringformat:"02d"}} <small style="color: blue;">{{aula.startDate|date:"d/m/Y"}}</small></td>
-                </a>
-              <td>{{aula.questao_problema_desafio|linebreaksbr}}</td>
-              <td>{{aula.atividade|linebreaksbr}}</td>
-              <td>{{aula.evidencias_de_aprendizado|linebreaksbr}}</td>
-              <td>{{aula.descricao|linebreaksbr}}</td>
+                Aula {{forloop.parentloop.counter|stringformat:"02d"}}
+                <small style="color: blue;">{{grupo.grouper|date:"d/m/Y"}}</small>
+              </td>
+              <td>
+                {% for aula in grupo.list %}
+                  <a class="open-modal" href="{% url 'edita_aula' aula.id %}" data-url="{% url 'edita_aula' aula.id %}">
+                    {{aula.questao_problema_desafio}}
+                  </a>
+                  {% if not forloop.last %} | {% endif %}
+                {% endfor %}
+              </td>
+              <td>
+                {% for aula in grupo.list %}
+                  <a class="open-modal" href="{% url 'edita_aula' aula.id %}" data-url="{% url 'edita_aula' aula.id %}">
+                    {{aula.atividade}}
+                  </a>
+                  {% if not forloop.last %} | {% endif %}
+                {% endfor %}
+              </td>
+              <td>
+                {% for aula in grupo.list %}
+                  <a class="open-modal" href="{% url 'edita_aula' aula.id %}" data-url="{% url 'edita_aula' aula.id %}">
+                    {{aula.evidencias_de_aprendizado}}
+                  </a>
+                  {% if not forloop.last %} | {% endif %}
+                {% endfor %}
+              </td>
+              <td>
+                {% for aula in grupo.list %}
+                  <a class="open-modal" href="{% url 'edita_aula' aula.id %}" data-url="{% url 'edita_aula' aula.id %}">
+                    {{aula.descricao}}
+                  </a>
+                  {% if not forloop.last %} | {% endif %}
+                {% endfor %}
+              </td>
             </tr>
           {% endfor %}
         </tbody>
