informações adicionais para alocações semanais

--- a/estudantes/templates/estudantes/alocacao_semanal.html
+++ b/estudantes/templates/estudantes/alocacao_semanal.html
@@ -16,5 +16,5 @@
   <div class="mt-1">
     <b>{% lng "Projeto" "Project" %}:</b>{{ projeto }}
   </div>
-  {% include "mostra_horarios.html" %}
+  {% include "mostra_horarios.html" with com_orientacoes=True %}
 {% endblock %}
