--- a/coordenacao/templates/coordenacao/coordenacao.html
+++ b/coordenacao/templates/coordenacao/coordenacao.html
@@ -14,6 +14,9 @@
   <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'planos_de_orientacao_todos' %}">
     {% lng "Planos de Orientação" "Advisoring Plans" %}
   </a></div>
+  <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'alocacoes_semanais' 'todos' %}">
+    {% lng "Alocações Semanais" "Weekly Allocations" %}
+  </a></div>
   <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'relatos_quinzenais' 'todos' %}">
     {% lng "Relatos Quinzenais" "Biweekly Reports" %}
   </a></div>
